--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     </properties>
     <modules>
         <module>file-system</module>
+        <module>json</module>
     </modules>
     <dependencyManagement>
         <dependencies>
@@ -18,6 +19,11 @@
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-library</artifactId>
                 <version>2.11.5</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.module</groupId>
+                <artifactId>jackson-module-scala_2.11</artifactId>
+                <version>2.4.4</version>
             </dependency>
             <dependency>
                 <groupId>org.easymock</groupId>
