--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?><project>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.seanshubin</groupId>
     <artifactId>utility</artifactId>
@@ -11,6 +12,7 @@
     <modules>
         <module>file-system</module>
         <module>json</module>
+        <module>exception</module>
     </modules>
     <dependencyManagement>
         <dependencies>
