Added zip utility

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>file-system</module>
         <module>json</module>
         <module>reflection</module>
+        <module>zip</module>
     </modules>
     <dependencyManagement>
         <dependencies>
