--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>json</module>
         <module>reflection</module>
         <module>zip</module>
+        <module>system</module>
     </modules>
     <dependencyManagement>
         <dependencies>
