--- a/string/pom.xml
+++ b/string/pom.xml
@@ -5,7 +5,7 @@
         <artifactId>utility-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>utility-filesystem</artifactId>
+    <artifactId>utility-string</artifactId>
     <name>${project.groupId}:${project.artifactId}</name>
     <dependencies>
         <dependency>
