--- a/exec-test-app/pom.xml
+++ b/exec-test-app/pom.xml
@@ -6,7 +6,7 @@
 
     <!-- The Basics -->
     <!--<groupId>...</groupId>-->
-    <artifactId>utility-zip</artifactId>
+    <artifactId>utility-exec-test-app</artifactId>
     <!--<version>...</version>-->
     <!--<packaging>...</packaging>-->
     <dependencies>
