--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <dependencies>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.12.0-RC2</artifactId>
+            <artifactId>scalatest_2.12</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -28,7 +28,7 @@
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.module</groupId>
-                <artifactId>jackson-module-scala_2.12.0-RC1</artifactId>
+                <artifactId>jackson-module-scala_2.12</artifactId>
                 <version>2.8.3</version>
             </dependency>
             <dependency>
@@ -38,7 +38,7 @@
             </dependency>
             <dependency>
                 <groupId>org.scalatest</groupId>
-                <artifactId>scalatest_2.12.0-RC2</artifactId>
+                <artifactId>scalatest_2.12</artifactId>
                 <version>3.0.0</version>
                 <scope>test</scope>
             </dependency>
