--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,12 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.module</groupId>
                 <artifactId>jackson-module-scala_2.12</artifactId>
-                <version>2.8.8</version>
+                <version>2.8.9</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
-                <version>2.8.8</version>
+                <version>2.8.9</version>
             </dependency>
             <dependency>
                 <groupId>org.scalatest</groupId>
@@ -55,6 +55,7 @@
         <module>exec</module>
         <module>exec-test-app</module>
         <module>http</module>
+        <module>io</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
