--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <module>string</module>
         <module>zip</module>
         <module>duration-format</module>
+        <module>exception</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
