--- a/string/pom.xml
+++ b/string/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>utility-string</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.seanshubin.utility</groupId>
+            <artifactId>utility-compare</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
     <parent>
         <groupId>com.seanshubin.utility</groupId>
         <artifactId>utility-parent</artifactId>
